# para-notes

./: Cargo.toml  Makefile  README.md
assets/: editor.js  main.js  para.css
docs/: cli.md
resources/launchd/: com.divanv.para.serve.plist  install.sh
src/: main.rs  serve.rs
