[package]
name = "para-notes"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
comrak = { version = "0.34", default-features = false, features = ["syntect"] }
futures = "0.3"
notify = "8.0"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

[[bin]]
name = "para"
path = "src/main.rs"
